# dakax

./: Documentation.md  ProjectHome.md
DakaX_Arduino/DakaX/: BluetoothBee.h  serialComLib.cpp
DakaX_Processing/: CMakeLists.txt  ChangeLog.txt  buildLinux32.sh  buildOsx.sh  installOsx.sh  installWin.sh
DakaX_Processing/include/: DakaX.h
DakaX_Processing/src/: DakaX.cpp  DakaX.i
DakaX_Processing/src/p5_src/: DakaX.java
trunk/DakaX_Arduino/DakaX/: BluetoothBee.cpp  DakaX.cpp  DakaX.h  DakaXIMU.cpp  DakaXIMU.h  keywords.txt  serialComLib.h
trunk/DakaX_Arduino/DakaX/examples/DakaXBluetoothTest/: DakaXBluetoothTest.pde
trunk/DakaX_Arduino/DakaX/examples/DakaXSerialCom/: DakaXSerialCom.pde
trunk/DakaX_Arduino/DakaX/examples/DakaXSerialTest/: DakaXSerialTest.pde
trunk/DakaX_Processing/: CMakeLists.txt  buildLinux64.sh  buildOsx.sh  buildWin32.bat  buildWin64.bat  installLinux.sh
trunk/DakaX_Processing/src/: DakaX.cpp
trunk/DakaX_Processing/src/p5_src/: DakaX.java  SerialComLib.java
wiki/: Documentation.wiki
